--- a/index.html
+++ b/index.html
@@ -208,6 +208,17 @@
     </a>
   </template>
 
+  <template id="server_error">
+    <div class="server_error">
+      <div class="error_content">
+        <div class="error_text">
+          <p>При загрузке данных с сервера произошла ошибка.</p>
+          <p>Приходите позже</p>
+        </div>
+      </div>
+    </div>
+  </template>
+
   <!-- Сообщение с ошибкой загрузки изображения -->
   <template id="error">
     <section class="error">
